--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- ETIQUETAS PARA WHATSAPP Y REDES SOCIALES (Open Graph) -->
     <meta property="og:title" content="Centro Diurno Hatillo-San Sebastián: ¡Regala apoyo, recibí esperanza!">
     <meta property="og:description" content="Apoya a nuestros adultos mayores adquiriendo Bonos de Solidaridad deducibles de renta. Tu ayuda transforma vidas.">
-    <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhvzMB1Y6IdpS5xD0gYOS5NkWFgm6a4CXLV3aklRjdDyav-ysweRgCT0zmyadXWvgxyPFaiixRHMj49QLo_bxDotwup7xZ_5NmkE514IgYeRH2bXW4WaiYnB3wlOUHclkVvyQNfWg2axW5PfMUTWPx-vgeedayQOhWKFy2vv6WAnBDm7OAZP7yrLnoA9Os/s320/a302bd11-7ef0-4865-8eb2-5d4fade97cd7.jpg">
+    <meta property="og:image" content="https://centrohatillosansebastiancr.netlify.app/static/media/Logo.538549bdc6f39bf49a25.png">
     <meta property="og:url" content="https://centrodiurnohatillo.com">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_CR">
@@ -42,19 +42,24 @@
         const { useState } = React;
 
         // --- DATOS CONSTANTES ---
-        const PHONE = "2214-1572"; // Número unificado
+        const PHONE = "2214-1572";
+        const ADDRESS = "Av. 46, San José, Kennedy";
+        const EMAILS = ["centrodhss@hotmail.com", "centrodhatillosansebastian@gmail.com"];
         const BANK_ACCOUNT = "100-01-000-125775-7";
-        // Actualizado el enlace de WhatsApp para usar el mismo número fijo (formato internacional 506 + número)
-        const WHATSAPP_LINK = `https://wa.me/50622141572?text=Hola,%20me%20gustaría%20información%20sobre%20los%20bonos%20solidarios.`;
-        const FACEBOOK_LINK = "https://www.facebook.com/centroancianos.hatillosansebastian?locale=es_LA";
+        const FACEBOOK_LINK = "https://www.facebook.com/centrodhss";
+        const LOGO_URL = "https://centrohatillosansebastiancr.netlify.app/static/media/Logo.538549bdc6f39bf49a25.png";
         const HEADER_IMAGE = "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhvzMB1Y6IdpS5xD0gYOS5NkWFgm6a4CXLV3aklRjdDyav-ysweRgCT0zmyadXWvgxyPFaiixRHMj49QLo_bxDotwup7xZ_5NmkE514IgYeRH2bXW4WaiYnB3wlOUHclkVvyQNfWg2axW5PfMUTWPx-vgeedayQOhWKFy2vv6WAnBDm7OAZP7yrLnoA9Os/s320/a302bd11-7ef0-4865-8eb2-5d4fade97cd7.jpg";
+        // WhatsApp se mantiene apuntando al fijo, según última instrucción, o se puede eliminar si se prefiere solo teléfono.
+        // Asumo que mantenemos el enlace pero con el número fijo si tienen WhatsApp Business Landline.
+        const WHATSAPP_LINK = `https://wa.me/50622141572?text=Hola,%20me%20gustaría%20información%20sobre%20los%20bonos%20solidarios.`;
 
         // --- ICONOS ---
         const Icons = {
             Heart: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>,
             Phone: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>,
             Info: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><circle cx="12" cy="12" r="10"/><path d="M12 16v-4"/><path d="M12 8h.01"/></svg>,
-            MessageCircle: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg>,
+            Mail: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>,
+            MapPin: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>,
             Copy: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>,
             CheckCircle: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>,
             Home: (props) => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" {...props}><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>,
@@ -76,8 +81,8 @@
                 <div className="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div className="flex items-center justify-between h-20">
                         <div className="flex items-center gap-3 cursor-pointer group" onClick={() => setActiveTab('inicio')}>
-                            <div className="bg-white p-2 rounded-full text-[#003366] transition-transform group-hover:scale-110">
-                                <Icons.Heart fill="#003366" size={24} />
+                            <div className="bg-white p-2 rounded-full text-[#003366] transition-transform group-hover:scale-110 flex items-center justify-center">
+                                <img src={LOGO_URL} alt="Logo" className="w-10 h-10 object-contain" />
                             </div>
                             <span className="font-bold text-lg leading-tight hidden sm:block text-white tracking-wide">
                                 Centro Diurno<br/>Hatillo-San Sebastián
@@ -194,7 +199,7 @@
             );
         };
 
-        const DonationSection = ({ showCopied, copyToClipboard }) => {
+        const DonationSection = ({ showCopied, copyToClipboard, setActiveTab }) => {
             const bonds = [
                 { price: "₡10,000", color: "from-blue-50 to-blue-100 border-blue-200" },
                 { price: "₡25,000", color: "from-blue-100 to-blue-200 border-blue-300" },
@@ -234,7 +239,12 @@
                                                 ))}
                                             </ul>
                                         </div>
-                                        <a href={WHATSAPP_LINK} target="_blank" className="w-full block text-center py-4 rounded-xl bg-[#003366] text-white font-bold text-lg shadow-lg hover:bg-[#004080] transition-colors group-hover:shadow-[#003366]/25">Solicitar ahora</a>
+                                        <button 
+                                            onClick={() => setActiveTab('contacto')}
+                                            className="w-full block text-center py-4 rounded-xl bg-[#003366] text-white font-bold text-lg shadow-lg hover:bg-[#004080] transition-colors group-hover:shadow-[#003366]/25"
+                                        >
+                                            Solicitar ahora
+                                        </button>
                                     </div>
                                 </div>
                             ))}
@@ -281,19 +291,21 @@
                         <div>
                             <div className="flex items-center gap-2 mb-6">
                                 <div className="bg-white/10 p-2 rounded-lg"><Icons.Phone className="text-blue-300" size={24}/></div>
-                                <h4 className="text-xl font-bold">Contacto Directo</h4>
+                                <h4 className="text-xl font-bold">Contacto</h4>
                             </div>
                             <a href={`tel:${PHONE.replace(/-/g, '')}`} className="text-blue-200/80 mb-2 font-mono text-lg block hover:text-white transition-colors">{PHONE}</a>
-                            <a href={WHATSAPP_LINK} target="_blank" className="inline-flex items-center text-white font-semibold hover:text-blue-300 transition-colors border-b border-transparent hover:border-blue-300 pb-1 mb-2">Enviar mensaje por WhatsApp <span className="ml-2">→</span></a>
-                            <br/>
-                            <a href={FACEBOOK_LINK} target="_blank" className="inline-flex items-center text-white font-semibold hover:text-blue-300 transition-colors border-b border-transparent hover:border-blue-300 pb-1"><Icons.Facebook className="mr-2 text-blue-300" size={20} /> Visítanos en Facebook</a>
+                            {EMAILS.map((email, i) => (
+                                <a key={i} href={`mailto:${email}`} className="text-blue-200/80 mb-1 text-sm block hover:text-white transition-colors">{email}</a>
+                            ))}
+                            <a href={FACEBOOK_LINK} target="_blank" className="inline-flex items-center text-white font-semibold hover:text-blue-300 transition-colors border-b border-transparent hover:border-blue-300 pb-1 mt-4"><Icons.Facebook className="mr-2 text-blue-300" size={20} /> Visítanos en Facebook</a>
                         </div>
                         <div>
                             <div className="flex items-center gap-2 mb-6">
-                                <div className="bg-white/10 p-2 rounded-lg"><Icons.Info className="text-blue-300" size={24}/></div>
+                                <div className="bg-white/10 p-2 rounded-lg"><Icons.MapPin className="text-blue-300" size={24}/></div>
                                 <h4 className="text-xl font-bold">Visítanos</h4>
                             </div>
-                            <p className="text-blue-200/80">Hatillo, San José, Costa Rica.<br/>Abierto de Lunes a Viernes.</p>
+                            <p className="text-blue-200/80">{ADDRESS}</p>
+                            <p className="text-blue-200/80 mt-2">Hatillo, San José, Costa Rica.<br/>Abierto de Lunes a Viernes.</p>
                         </div>
                     </div>
                     <div className="border-t border-white/10 pt-8 text-center">
@@ -301,14 +313,6 @@
                     </div>
                 </div>
             </footer>
-        );
-
-        const FloatingWhatsApp = () => (
-            <a href={WHATSAPP_LINK} target="_blank" className="fixed bottom-8 right-8 bg-[#25D366] text-white p-4 rounded-full shadow-[0_4px_20px_rgba(37,211,102,0.4)] hover:bg-[#20bd5a] transition-all transform hover:scale-110 hover:-translate-y-1 z-50 flex items-center gap-3 group" aria-label="Chat en WhatsApp">
-                <Icons.MessageCircle size={32} />
-                <span className="hidden md:inline font-bold pr-2">Chatear</span>
-                <span className="absolute -top-2 -right-2 w-4 h-4 bg-red-500 rounded-full border-2 border-white"></span>
-            </a>
         );
 
         // --- COMPONENTE PRINCIPAL (APP) ---
@@ -336,7 +340,7 @@
                             <>
                                 <Hero setActiveTab={setActiveTab} />
                                 <ProjectsSection />
-                                <DonationSection showCopied={showCopied} copyToClipboard={copyToClipboard} />
+                                <DonationSection showCopied={showCopied} copyToClipboard={copyToClipboard} setActiveTab={setActiveTab} />
                             </>
                         )}
                         {activeTab === 'proyectos' && (
@@ -354,7 +358,7 @@
                                     <h1 className="text-4xl font-bold">Haz tu Donación</h1>
                                     <p className="text-blue-200 mt-4">Tu aporte hace la diferencia</p>
                                 </div>
-                                <DonationSection showCopied={showCopied} copyToClipboard={copyToClipboard} />
+                                <DonationSection showCopied={showCopied} copyToClipboard={copyToClipboard} setActiveTab={setActiveTab} />
                             </div>
                         )}
                         {activeTab === 'contacto' && (
@@ -362,15 +366,27 @@
                                 <h2 className="text-4xl font-black text-[#003366] mb-8">Contáctanos</h2>
                                 <p className="text-xl text-gray-600 mb-12 max-w-2xl">Estamos aquí para responder tus dudas y guiarte en tu proceso de colaboración.</p>
                                 <div className="bg-white p-12 rounded-3xl shadow-xl border border-gray-100 max-w-lg w-full">
-                                    <p className="text-sm text-gray-400 uppercase font-bold tracking-widest mb-4">Llámanos o escríbenos</p>
-                                    <a href={`tel:${PHONE.replace(/-/g, '')}`} className="text-4xl font-black text-gray-800 mb-8 block hover:text-blue-600 transition-colors">{PHONE}</a>
-                                    <a href={WHATSAPP_LINK} className="inline-flex justify-center items-center w-full py-4 bg-green-500 text-white font-bold rounded-xl hover:bg-green-600 transition-colors shadow-lg shadow-green-500/20 gap-2"><Icons.MessageCircle size={24}/> WhatsApp Directo</a>
+                                    <div className="mb-8">
+                                        <p className="text-sm text-gray-400 uppercase font-bold tracking-widest mb-2">Dirección</p>
+                                        <p className="text-xl font-bold text-gray-800">{ADDRESS}</p>
+                                    </div>
+                                    
+                                    <div className="mb-8">
+                                        <p className="text-sm text-gray-400 uppercase font-bold tracking-widest mb-2">Llámanos</p>
+                                        <a href={`tel:${PHONE.replace(/-/g, '')}`} className="text-4xl font-black text-gray-800 hover:text-blue-600 transition-colors">{PHONE}</a>
+                                    </div>
+
+                                    <div className="mb-8">
+                                        <p className="text-sm text-gray-400 uppercase font-bold tracking-widest mb-2">Escríbenos</p>
+                                        {EMAILS.map((email, i) => (
+                                            <a key={i} href={`mailto:${email}`} className="text-lg font-medium text-blue-600 hover:underline block mb-1">{email}</a>
+                                        ))}
+                                    </div>
                                 </div>
                             </div>
                         )}
                     </div>
                     <Footer />
-                    <FloatingWhatsApp />
                 </div>
             );
         };
